react-projects/src/App.css
body {
    height: 100vh;
    width: 100vw;
    color: white;
    background: #1b1b1b;
}

h1 {
    text-align: center;
    padding: 2rem;
}

section {
    background: #1f1f1f;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 2rem;
    margin: 2rem;
}

.divider {
    border-bottom: 2px solid gray;
    margin: 5%;
}

